--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.java linguist-language=c
+*.h linguist-language=c
+*.c linguist-language=c
+*.obj linguist-language=c
+*.class linguist-language=c
