--- a/mini_jvm/CMakeLists.txt
+++ b/mini_jvm/CMakeLists.txt
@@ -36,6 +36,6 @@ set(SOURCE_FILES
         jvm/java_native_io.c
         jvm/java_native_std.c
         jvm/java_native_jdwp.c
-        jvm/java_native_jdwp.h)
+        jvm/java_native_jdwp.h jvm/jdwp.c jvm/jdwp.h jvm/java_native_io.h)
 
 add_executable(mini_jvm ${SOURCE_FILES})
