--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /mini_jvm/java/build/
 /mini_jvm/java/dist/
 /mini_jvm/cmake-build-debug/
-/mini_jvm/cmake-build-debug/*
+/mini_jvm/cmake-build-debug/CMakeFiles/
+*.obj
