--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ javalib/dist/mini_jvm_java.jar
 javalib/dist/README.TXT
 javalib/dist/mini_jvm_java.jar
 javalib/build/built-jar.properties
+javalib/build/built-jar.properties
+javalib/dist/mini_jvm_java.jar
