--- a/javalib_test/nbproject/private/private.properties
+++ b/javalib_test/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Gust\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/Users/Gust/Library/Application Support/NetBeans/8.1/build.properties
