--- a/mini_jvm/CMakeLists.txt
+++ b/mini_jvm/CMakeLists.txt
@@ -5,7 +5,7 @@ project(mini_jvm)
 #set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD 99)
 
-include_directories(jvm utils utils/cmem)
+include_directories(jvm utils utils/cmem )
 
 set(SOURCE_FILES
         utils/d_type.h
@@ -50,7 +50,11 @@ set(SOURCE_FILES
         utils/linkedlist.c
         utils/linkedlist.h
         utils/spinlock.c
-        utils/spinlock.h)
+        utils/spinlock.h
+#        utils/miniz/miniz.c
+        utils/miniz/miniz_wrapper.c
+        utils/miniz/miniz_wrapper.h
+        )
 
 add_executable(mini_jvm ${SOURCE_FILES})
 
