--- a/javalib_test/nbproject/project.properties
+++ b/javalib_test/nbproject/project.properties
@@ -35,7 +35,8 @@ includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=
+javac.classpath=\
+    ${reference.mini_jvm_java.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -83,6 +84,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.mini_jvm_java=../javalib
+reference.mini_jvm_java.jar=${project.mini_jvm_java}/dist/mini_jvm_java.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
