--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ javalib/nbproject/private/private.properties
 javalib_test/nbproject/genfiles.properties
 javalib_test/nbproject/private/private.properties
 .svn
+win_gui/
