--- a/mini_jvm/CMakeLists.txt
+++ b/mini_jvm/CMakeLists.txt
@@ -53,7 +53,7 @@ set(SOURCE_FILES
 add_executable(mini_jvm ${SOURCE_FILES})
 
 #Set link library.
-TARGET_LINK_LIBRARIES(mini_jvm pthread m )
+TARGET_LINK_LIBRARIES(mini_jvm pthread m dl)
 if ( (CMAKE_SYSTEM_NAME MATCHES "Windows") OR (CMAKE_SYSTEM_NAME MATCHES "CYGWIN"))
     TARGET_LINK_LIBRARIES(mini_jvm  ws2_32)
 endif ()
