--- a/javalib_test/nbproject/project.properties
+++ b/javalib_test/nbproject/project.properties
@@ -26,7 +26,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/minijvm_javatest.jar
+dist.jar=${dist.dir}/minijvm_test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=**/*.class
@@ -36,7 +36,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.mini_jvm_java.jar}
+    ${reference.minijvm_rt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -84,8 +84,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-project.mini_jvm_java=../javalib
-reference.mini_jvm_java.jar=${project.mini_jvm_java}/dist/mini_jvm_java.jar
+project.minijvm_rt=../javalib
+reference.minijvm_rt.jar=${project.minijvm_rt}/dist/minijvm_rt.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
