--- a/javalib_test/nbproject/project.properties
+++ b/javalib_test/nbproject/project.properties
@@ -82,7 +82,7 @@ manifest.custom.codebase=
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 platform.active=default_platform
 project.minijvm_rt=../javalib
 reference.minijvm_rt.jar=${project.minijvm_rt}/dist/minijvm_rt.jar
