--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,8 @@ win_gui/
 jni_test/cmake-build-debug/
 jni_test/cmake-build-release/
 jni_test/java/build/
-jni_gui/
+jni_gui/cmake-build-debug/
+jni_gui/cmake-build-release/
+jni_gui/java/build
+jni_gui/java/output.c
+jni_gui/java/gljni.c
