fix builder bug

--- a/jni_gui/CMakeLists.txt
+++ b/jni_gui/CMakeLists.txt
@@ -11,8 +11,7 @@ set(SOURCE_FILES
         glad.c
         jni_glfw.h
         jni_glfw.c
-        graphics.c
-        graphics.h
+        jni_nk.c
         )
 find_package(OpenGL REQUIRED)
 add_executable(test_gui ${SOURCE_FILES})
