--- a/jni_gui/java/nbproject/project.properties
+++ b/jni_gui/java/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.mini_jvm_java.jar}
+    ${reference.minijvm_rt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +62,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-project.mini_jvm_java=../../javalib
-reference.mini_jvm_java.jar=${project.mini_jvm_java}/dist/mini_jvm_java.jar
+project.minijvm_rt=../../javalib
+reference.minijvm_rt.jar=${project.minijvm_rt}/dist/minijvm_rt.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -76,4 +76,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+test.res.dir=res
 test.src.dir=test
