fix nk jni builder and tested nk native method

--- a/jni_gui/CMakeLists.txt
+++ b/jni_gui/CMakeLists.txt
@@ -14,13 +14,14 @@ set(SOURCE_FILES
         jni_gl.c
         jni_nk.c
         )
-find_package(OpenGL REQUIRED)
 add_executable(test_gui ${SOURCE_FILES})
 
 add_library(gui SHARED ${SOURCE_FILES})
 
 
+#find_package(OpenGL REQUIRED)
 MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")
+
 
 IF (APPLE)
     MESSAGE("apple os here.")
@@ -30,17 +31,22 @@ IF (APPLE)
     find_library(OPENGL_LIB OpenGL)
     find_library(COREFOUNDATION_LIB CoreFoundation)
     find_library(COREVIDEO_LIB CoreVideo)
-    MARK_AS_ADVANCED(COCOA_LIB IOKIT_LIB OPENGL_LIB COREFOUNDATION_LIB COREVIDEO_LIB)
-    SET(EXTRA_LIBS ${COCOA_LIB} ${IOKIT_LIB} ${OPENGL_LIB} ${COREFOUNDATION_LIB} ${COREVIDEO_LIB})
+    MARK_AS_ADVANCED(MY_LIB COCOA_LIB IOKIT_LIB OPENGL_LIB COREFOUNDATION_LIB COREVIDEO_LIB)
+    SET(EXTRA_LIBS ${MY_LIB} ${COCOA_LIB} ${IOKIT_LIB} ${OPENGL_LIB} ${COREFOUNDATION_LIB} ${COREVIDEO_LIB})
 
     TARGET_LINK_LIBRARIES(gui ${EXTRA_LIBS})
+    TARGET_LINK_LIBRARIES(test_gui ${EXTRA_LIBS})
 ELSEIF (LINUX)
-ELSEIF (WINDOWS)
+ELSEIF (MINGW)
     find_library(MY_LIB libglfw3.a deps/lib/win_i686/)
-    TARGET_LINK_LIBRARIES(gui opengl32)
+    message(${MY_LIB})
+    MARK_AS_ADVANCED(MY_LIB)
+    TARGET_LINK_LIBRARIES(gui ${MY_LIB})
+    TARGET_LINK_LIBRARIES(gui opengl32 )
+    TARGET_LINK_LIBRARIES(test_gui opengl32 )
+
+    TARGET_LINK_LIBRARIES(test_gui ${MY_LIB})
+    set(CMAKE_EXE_LINKER_FLAGS "-mwindows")
 ENDIF ()
 
-TARGET_LINK_LIBRARIES(gui ${MY_LIB})
 
-
-#set(CMAKE_EXE_LINKER_FLAGS "-mwindows")
