--- a/jni_gui/CMakeLists.txt
+++ b/jni_gui/CMakeLists.txt
@@ -23,7 +23,13 @@ add_library(gui SHARED ${SOURCE_FILES})
 
 
 #find_package(OpenGL REQUIRED)
-MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")
+MESSAGE(STATUS "CMAKE_SYSTEM :${CMAKE_SYSTEM}")
+MESSAGE(STATUS "CMAKE_SYSTEM_NAME :${CMAKE_SYSTEM_NAME}")
+MESSAGE(STATUS "CMAKE_SYSTEM_PROCESSOR :${CMAKE_SYSTEM_PROCESSOR}")
+MESSAGE(STATUS "WIN32 :${WIN32}")
+MESSAGE(STATUS "CMAKE_GENERATOR :${CMAKE_GENERATOR}")
+MESSAGE(STATUS "CMAKE_SIZEOF_VOID_P  :${CMAKE_SIZEOF_VOID_P}")
+MESSAGE(STATUS "CMAKE_SOURCE_DIR  :${CMAKE_SOURCE_DIR}")
 
 
 IF (APPLE)
@@ -42,7 +48,13 @@ IF (APPLE)
     TARGET_LINK_LIBRARIES(test_gui ${EXTRA_LIBS})
 ELSEIF (LINUX)
 ELSEIF (MINGW)
-    find_library(MY_LIB libglfw3.a deps/lib/win_i686/)
+    IF (CMAKE_SIZEOF_VOID_P EQUAL 4)
+        message("32bit")
+        find_library(MY_LIB libglfw3.a "${CMAKE_SOURCE_DIR}/deps/lib/win_i686/")
+    elseif(CMAKE_SIZEOF_VOID_P EQUAL 8)
+        message("64bit")
+        find_library(MY_LIB libglfw3.a "${CMAKE_SOURCE_DIR}/deps/lib/win_x64/")
+    endif()
     message(${MY_LIB})
     MARK_AS_ADVANCED(MY_LIB)
     TARGET_LINK_LIBRARIES(gui ${MY_LIB})
