--- a/jni_gui/CMakeLists.txt
+++ b/jni_gui/CMakeLists.txt
@@ -46,7 +46,12 @@ IF (APPLE)
     #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /Users/Gust/Library/Developer/Xcode/DerivedData/jvm_macos-aztlknxrtoubcvefejqkudbbsjxo/Build/Products/Debug/)
     TARGET_LINK_LIBRARIES(gui ${EXTRA_LIBS})
     TARGET_LINK_LIBRARIES(test_gui ${EXTRA_LIBS})
-ELSEIF (LINUX)
+ELSEIF (UNIX)
+    MESSAGE("linux os here.")
+    find_library(MY_LIB libglfw3.a "${CMAKE_SOURCE_DIR}/deps/lib/centos_x64/")
+    MARK_AS_ADVANCED(MY_LIB)
+    TARGET_LINK_LIBRARIES(gui ${MY_LIB})
+    TARGET_LINK_LIBRARIES(gui X11 Xi pthread Xcursor Xrandr GL Xinerama)
 ELSEIF (MINGW)
     IF (CMAKE_SIZEOF_VOID_P EQUAL 4)
         message("32bit")
