--- a/jni_gui/CMakeLists.txt
+++ b/jni_gui/CMakeLists.txt
@@ -43,22 +43,25 @@ IF (APPLE)
     MARK_AS_ADVANCED(MY_LIB COCOA_LIB IOKIT_LIB OPENGL_LIB COREFOUNDATION_LIB COREVIDEO_LIB)
     SET(EXTRA_LIBS ${MY_LIB} ${COCOA_LIB} ${IOKIT_LIB} ${OPENGL_LIB} ${COREFOUNDATION_LIB} ${COREVIDEO_LIB})
 
-    #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /Users/Gust/Library/Developer/Xcode/DerivedData/jvm_macos-aztlknxrtoubcvefejqkudbbsjxo/Build/Products/Debug/)
     TARGET_LINK_LIBRARIES(gui ${EXTRA_LIBS})
     TARGET_LINK_LIBRARIES(test_gui ${EXTRA_LIBS})
+    SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/macos)
 ELSEIF (UNIX)
     MESSAGE("linux os here.")
     find_library(MY_LIB libglfw3.a "${CMAKE_SOURCE_DIR}/deps/lib/centos_x64/")
     MARK_AS_ADVANCED(MY_LIB)
     TARGET_LINK_LIBRARIES(gui ${MY_LIB})
     TARGET_LINK_LIBRARIES(gui X11 Xi pthread Xcursor Xrandr GL Xinerama)
+    SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/centos_x64)
 ELSEIF (MINGW)
     IF (CMAKE_SIZEOF_VOID_P EQUAL 4)
         message("32bit")
         find_library(MY_LIB libglfw3.a "${CMAKE_SOURCE_DIR}/deps/lib/win_i686/")
+        SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/win32)
     elseif(CMAKE_SIZEOF_VOID_P EQUAL 8)
         message("64bit")
         find_library(MY_LIB libglfw3.a "${CMAKE_SOURCE_DIR}/deps/lib/win_x64/")
+        SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/win_x64)
     endif()
     message(${MY_LIB})
     MARK_AS_ADVANCED(MY_LIB)
@@ -70,6 +73,6 @@ ELSEIF (MINGW)
     set(CMAKE_EXE_LINKER_FLAGS "-mwindows")
 ENDIF ()
 
-
+message(${LIBRARY_OUTPUT_PATH})
 
 
