--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@ javalib/build/
 javalib/dist/
 javalib_test/build/
 javalib_test/dist/
-mini_jvm/wintest/
+mini_jvm/.vs/
+mini_jvm/Debug/
+mini_jvm/Release/
 mini_jvm/cmake-build-debug/
 mini_jvm/cmake-build-release/
 javalib/build/built-jar.properties
@@ -11,7 +13,6 @@ javalib/nbproject/private/private.properties
 javalib_test/nbproject/genfiles.properties
 javalib_test/nbproject/private/private.properties
 .svn
-win_gui/
 jni_test/cmake-build-debug/
 jni_test/cmake-build-release/
 jni_test/java/build/
