--- a/test/jni_test/CMakeLists.txt
+++ b/test/jni_test/CMakeLists.txt
@@ -14,17 +14,17 @@ add_library(jnitest SHARED  ${SOURCE_FILES})
 
 IF (APPLE)
     MESSAGE("apple os here.")
-    SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/macos)
+    SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../binary/macos)
 ELSEIF (UNIX)
     MESSAGE("linux os here.")
-    SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/centos_x64)
+    SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../binary/centos_x64)
 ELSEIF (MINGW)
     IF (CMAKE_SIZEOF_VOID_P EQUAL 4)
         message("win 32bit")
-        SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/win32)
+        SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../binary/win32)
     elseif(CMAKE_SIZEOF_VOID_P EQUAL 8)
         message("win 64bit")
-        SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/win_x64)
+        SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../binary/win_x64)
     endif()
 
 ENDIF ()
