--- a/mini_jvm/CMakeLists.txt
+++ b/mini_jvm/CMakeLists.txt
@@ -65,16 +65,16 @@ TARGET_LINK_LIBRARIES(mini_jvm pthread m)
 MESSAGE(STATUS "platform: ${CMAKE_SYSTEM_NAME}")
 
 IF (APPLE)
-    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../binary/macos)
+    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/macos)
 ELSEIF (UNIX)
     TARGET_LINK_LIBRARIES(mini_jvm dl)
-    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../binary/centos_x64)
+    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/centos_x64)
 ELSEIF (MINGW)
     TARGET_LINK_LIBRARIES(mini_jvm ws2_32)
     IF (CMAKE_SIZEOF_VOID_P EQUAL 4)
-        SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../binary/win32)
+        SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/win32)
     elseif (CMAKE_SIZEOF_VOID_P EQUAL 8)
-        SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../binary/win_x64)
+        SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../binary/win_x64)
     endif ()
 ENDIF ()
 
