optimize class load seq

--- a/ex_lib/luaj/nbproject/project.properties
+++ b/ex_lib/luaj/nbproject/project.properties
@@ -82,7 +82,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.minijvm_rt=../../githome/mini_jvm/javalib
+project.minijvm_rt=../../javalib
 reference.minijvm_rt.jar=${project.minijvm_rt}/dist/minijvm_rt.jar
 run.classpath=\
     ${javac.classpath}:\
