--- a/ex_lib/glfm/example/CMakeLists.txt
+++ b/ex_lib/glfm/example/CMakeLists.txt
@@ -4,7 +4,7 @@ link_libraries(glfm)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 # Common
-set(GLFM_APP_ORGANIZATION_IDENTIFIER "com.brackeen")
+set(GLFM_APP_ORGANIZATION_IDENTIFIER "com.eglsgame")
 set(GLFM_APP_VERSION "1.0")
 set(GLFM_APP_VERSION_ITERATION 1)
 set(GLFM_APP_ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets) 
