add new mem allocator  ltalloc

--- a/mini_jvm/CMakeLists.txt
+++ b/mini_jvm/CMakeLists.txt
@@ -56,7 +56,9 @@ set(SOURCE_FILES
         utils/bytebuf.h
         utils/miniz/miniz_wrapper.c
         utils/miniz/miniz_wrapper.h
-        utils/dirent_win.h)
+        utils/dirent_win.h
+        utils/ltalloc.cc
+        )
 
 MESSAGE(STATUS "platform: ${CMAKE_SYSTEM_NAME}")
 
