--- a/test/jvm_vs/mini_jvm.vcxproj.filters
+++ b/test/jvm_vs/mini_jvm.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="..\..\mini_jvm\utils\utf8_string.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\mini_jvm\utils\ltalloc.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\mini_jvm\jvm\garbage.h">
