--- a/javalib/src/sys.properties
+++ b/javalib/src/sys.properties
@@ -1,3 +1,15 @@
 com.sun.cldc.util.mini.TimeZoneImpl.timezone=CTT
-line.separator=\r\n
 java.library.path=./
+file.separator=/
+java.class.path=
+java.home=
+java.vendor=org.minijvm
+java.vendor.url=
+java.version=0.1
+line.separator=\n
+os.arch=
+os.name=
+os.version=
+path.separator=:
+user.dir=
+user.home=
