--- a/javalib/src/sys.properties
+++ b/javalib/src/sys.properties
@@ -1,7 +1,7 @@
 com.sun.cldc.util.mini.TimeZoneImpl.timezone=CTT
 java.library.path=./
 file.separator=/
-java.class.path=
+java.class.path=../lib/minijvm_rt.jar
 java.home=
 java.vendor=org.minijvm
 java.vendor.url=
@@ -10,6 +10,8 @@ line.separator=\n
 os.arch=
 os.name=
 os.version=
-path.separator=:
+path.separator=;
 user.dir=
 user.home=
+sun.boot.class.path=../lib/minijvm_rt.jar:
+java.ext.dirs=../lib/
