--- a/javalib/src/sys.properties
+++ b/javalib/src/sys.properties
@@ -1,6 +1,7 @@
 com.sun.cldc.util.mini.TimeZoneImpl.timezone=CTT
 java.library.path=./
 file.separator=/
+file.encoding=utf-8
 java.class.path=../lib/minijvm_rt.jar
 java.home=
 java.vendor=org.minijvm
