update binary mac

--- a/javalib/src/sys.properties
+++ b/javalib/src/sys.properties
@@ -1,6 +1,6 @@
 com.sun.cldc.util.mini.TimeZoneImpl.timezone=CTT
 java.library.path=./
-file.separator=/
+file.separator=jvm_set_value
 file.encoding=utf-8
 java.class.path=../lib/minijvm_rt.jar
 java.home=
@@ -9,10 +9,10 @@ java.vendor.url=
 java.version=0.1
 line.separator=\n
 os.arch=
-os.name=
+os.name=jvm_set_value
 os.version=
-path.separator=;
+path.separator=jvm_set_value
 user.dir=
 user.home=
-sun.boot.class.path=../lib/minijvm_rt.jar:
+sun.boot.class.path=../lib/minijvm_rt.jar
 java.ext.dirs=../lib/
