--- a/javalib/src/sys.properties
+++ b/javalib/src/sys.properties
@@ -1,17 +1,17 @@
 com.sun.cldc.util.mini.TimeZoneImpl.timezone=CTT
 java.library.path=./
-file.separator=jvm_set_value
+file.separator=jvm_set_value: windows="\\" posix="/"
 file.encoding=utf-8
 java.class.path=../lib/minijvm_rt.jar
 java.home=
 java.vendor=org.minijvm
 java.vendor.url=
 java.version=0.1
-line.separator=\n
+line.separator=jvm_set_value: posix="\n"  windows="\r\n"
 os.arch=
-os.name=jvm_set_value
+os.name=jvm_set_value: "Mac" "Linux" "Windows"
 os.version=
-path.separator=jvm_set_value
+path.separator=jvm_set_value: windows=";"  posix=":"
 user.dir=
 user.home=
 sun.boot.class.path=../lib/minijvm_rt.jar
