--- a/javalib/src/sys.properties
+++ b/javalib/src/sys.properties
@@ -2,11 +2,11 @@ com.sun.cldc.util.mini.TimeZoneImpl.timezone=CTT
 java.library.path=./
 file.separator=jvm_set_value: windows="\\" posix="/"
 file.encoding=utf-8
-java.class.path=../lib/minijvm_rt.jar
+java.class.path=jvm_set_value : classpath  jvm startup with -cp
 java.home=
 java.vendor=org.minijvm
 java.vendor.url=
-java.version=0.1
+java.version=1.0
 line.separator=jvm_set_value: posix="\n"  windows="\r\n"
 os.arch=
 os.name=jvm_set_value: "Mac" "Linux" "Windows"
@@ -14,5 +14,5 @@ os.version=
 path.separator=jvm_set_value: windows=";"  posix=":"
 user.dir=
 user.home=
-sun.boot.class.path=../lib/minijvm_rt.jar
+sun.boot.class.path=jvm_set_value: path to minijvm_rt.jar
 java.ext.dirs=../lib/
