--- a/mobile/java/guilib/nbproject/project.properties
+++ b/mobile/java/guilib/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=glfm_gui
 application.vendor=gust
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,7 +31,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.minijvm_rt.jar}
 # Space-separated list of extra javac options
@@ -57,7 +60,24 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=com.egls.test.GuiTest
+# \u9ed8\u8ba4 Application-Library-Allowable-Codebase \u5c5e\u6027\u7684\u53ef\u9009\u8986\u76d6, \u8be5\u5c5e\u6027\u6807\u8bc6\u9884\u671f\u627e\u5230\u60a8\u7684\u7b7e\u540d RIA \u7684\u4f4d\u7f6e\u3002
+manifest.custom.application.library.allowable.codebase=
+# \u9ed8\u8ba4 Caller-Allowable-Codebase \u5c5e\u6027\u7684\u53ef\u9009\u8986\u76d6, \u8be5\u5c5e\u6027\u6807\u8bc6\u5728\u65e0\u5b89\u5168\u63d0\u793a\u7684\u60c5\u51b5\u4e0b JavaScript \u4ee3\u7801\u53ef\u4ee5\u4ece\u4e2d\u5bf9\u60a8\u7684 RIA \u8fdb\u884c\u8c03\u7528\u7684\u57df\u3002
+manifest.custom.caller.allowable.codebase=
+# \u53ef\u4ee5\u9009\u62e9\u8986\u76d6\u9ed8\u8ba4\u7684\u4ee3\u7801\u5e93\u6e05\u5355\u5c5e\u6027, \u7528\u4e8e\u9632\u6b62 RIA \u88ab\u7528\u4f5c\u5176\u4ed6\u7528\u9014
+manifest.custom.codebase=
+# \u53ef\u4ee5\u9009\u62e9\u8986\u76d6\u9ed8\u8ba4\u7684\u6743\u9650\u6e05\u5355\u5c5e\u6027 (\u652f\u6301\u7684\u503c: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
